--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "tunnel-agent": "^0.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
